# merger

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac  git-add
src/: main.c  merger.c  merger.h
